tests/snapshots/run_wpt_conformance__trtx_cos_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cos.https.any.js",
    "cos float32 0D scalar",
    "trtx",
    "PASS",
)
